--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -59,6 +59,7 @@
     font-weight: bold;
     text-decoration: none;
     text-transform: uppercase;
+    margin-right: 0.5rem;
     &:hover {
         cursor: default;
         text-decoration: none;
