--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -642,7 +642,7 @@ ul.fancytree-container {
 }
 
 .c-view .c-featurePager__container:last-of-type {
-    /* margin: 0 !important; */
+    margin-top: 2rem;
 }
 
 .c-buttoneGroup__viewMode {
