--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -70,7 +70,7 @@
 
 .sui-search3 {
     font-size: 2rem;
-    color: #999;
+    color: #ccc;
     cursor: pointer;
     right: 0.5rem;
     position: relative;
