--- a/kmaps-app/src/views/Collections/collections.scss
+++ b/kmaps-app/src/views/Collections/collections.scss
@@ -17,6 +17,7 @@
 
         .c-view__wrapper {
             border: none;
+            margin-top: 1rem;
             .react-photo-gallery--gallery {
                 margin-top: 3rem;
             }
