--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -37,9 +37,10 @@
     margin-left: -0.6rem;
 }
 .c-MainSearchToggle--group label.btn.active svg {
-    font-size: 2.2rem;
-    color: #4d59ca;
+    font-size: 2.075rem;
+    color: #000;
     padding-left: 0.2rem;
+    padding-top: 0;
 }
 .c-MainSearchToggle--button {
     color: black;
