--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -172,16 +172,25 @@
 .sui-advValueRem:hover {
     color: #668eec;
 }
-
 .sui-advTerm {
-    font-size: 1.1rem;
+    font-size: 1.175rem;
     padding: 0 0.5rem 0.5rem 2.5rem;
-    margin: -0.5rem 0 0 1rem;
+    margin: 0.5rem 0 0 1rem;
     text-transform: capitalize;
 }
-.sui-advTerm .icon::before {
+
+.sui-advTermRem {
+    display: inline-block;
+    cursor: pointer;
+    margin-left: 4px;
+}
+.sui-advTermRem::before {
     color: red;
 }
+.sui-advTermRem:hover::before {
+    color: blue;
+}
+
 .sui-advTerm:empty {
     display: none;
 }
@@ -350,10 +359,13 @@ input:focus-visible,
     cursor: pointer;
     padding: 0 1rem 0.25rem;
     margin-bottom: 0.1rem;
+    position: relative;
+    border-left: 0.1rem solid #edf2f7;
 }
-
 .sui-advEditLine:hover {
-    background-color: #dee7f1;
+    background-color: #edf2f7;
+    border-left: 0.1rem solid #6b77ea;
+    border-right: 0.2rem solid #6b77ea;
 }
 .sui-adv-facetlist > .sui-advEditLine:nth-last-child(2):hover {
     background-color: transparent !important;
@@ -361,9 +373,19 @@ input:focus-visible,
 .sui-advEditLine.chosen {
     background-color: #dee7f1;
     border-right: 0.4rem solid #6b77ea;
+    border-left: 0.2rem solid #6b77ea;
     border-radius: 1rem 0 0 1rem;
 }
-
+.sui-advEditLine.chosen::after {
+    content: '√';
+    display: inline-block;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #6b77ea;
+    position: absolute;
+    right: 0.75rem;
+    top: 0.2rem;
+}
 .sui-advEdit-facet-ctrls {
     margin-bottom: 0.5rem;
 }
