--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -1,7 +1,7 @@
 @import '../../index-variables';
 
 .c-kmaptree {
-    margin: 2rem 0 0 2rem;
+    margin: 0 0 0 2rem;
     max-height: 50rem;
     overflow-y: scroll;
 }
@@ -20,6 +20,7 @@
     min-height: 70rem;
     border: 0.4rem solid #ccc;
     border-width: 0 0.3rem 0.5rem 0;
+    margin-top: 1.5rem;
 }
 
 .l-column_related .c-kmaptree {
