--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -4,6 +4,7 @@
     // width: 22rem;
     // max-width: 35rem;
     min-width: 20rem;
+    max-width: 34rem;
     height: 100vh;
     margin: 0 0 0 -20rem;
     padding: 0;
