Style updates for breadcrumb separator, & kmaps header tabs section as seen in Places.

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -177,6 +177,16 @@ div.image-wrapper.center figcaption {
 .c-content__main__kmaps > h3 {
     margin-left: 2rem;
 }
+.c-content__main__kmaps > .nav-tabs {
+    margin-top: 1.5rem;
+    padding-left: 4rem;
+}
+.c-content__main__kmaps > .nav-tabs a {
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 1rem 2rem 0.25rem;
+}
 
 //---------------------------------------
 // *** THEME COLORS & ICONS
