--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -65,11 +65,9 @@
 .c-relplaces-list.places {
     h2.row {
         margin: 1rem 0 1rem -1.5rem;
-        font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif, shanticon;
+        font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif;
         font-weight: 600;
-        font-size: 1.65rem;
-        /* color: #777;*/
-        text-transform: uppercase;
+        font-size: 1.45rem;
     }
 }
 
