Style updates for main searchbox, site header, node sub-header dropdown, kmaps content

--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -506,7 +506,7 @@ color: #a4baec;
 .sui-boolItem:hover,
 .sui-advEditBool:hover {
     border-color: #4d59ca;
-    color: #4d59ca;
+    color: red;
 }
 .sui-advEditBool {
     position: relative;
