--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -60,6 +60,7 @@ aside .c-perspective-select {
     select {
         max-width: 18rem;
         margin-right: 1rem;
+        margin-bottom: 0.5rem;
     }
 }
 
