--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -58,12 +58,13 @@
 }
 
 .sui-search2 {
-    padding: 0.15rem 0 0.15rem 1.25rem;
+    padding: 0.1rem 0 0.15rem 1.25rem;
     border-radius: 4rem;
     border: 1px solid #ccc;
-    font-size: 1.35rem;
-    margin: 0.65rem 0 0;
+    font-size: 1.45rem;
+    margin: 0.5rem 0 0;
     min-width: 21rem;
+    font-style: italic;
 }
 
 .l-search__input__buttons {
