--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -633,6 +633,13 @@ ul.fancytree-container {
     display: none;
 }
 
+.btn-primary:not(:disabled):not(.disabled):active,
+.btn-primary:not(:disabled):not(.disabled).active,
+.show > .btn-primary.dropdown-toggle {
+    background: #fff;
+    color: #000;
+}
+
 // View Styles
 .c-view__wrapper {
     border: none;
