--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -177,6 +177,7 @@
     padding: 0 0.5rem 0.5rem 2.5rem;
     margin: 0.5rem 0 0 1rem;
     text-transform: capitalize;
+    cursor: default;
 }
 
 .sui-advTermRem {
