--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -51,7 +51,10 @@
     margin-right: 15rem;
     padding-left: 2rem;
     padding-top: 0.5rem;
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #d0d0d0;
+
+    min-width: 27rem;
+    max-width: 30rem;
 }
 .c-site__search > * {
     display: inline;
@@ -65,6 +68,13 @@
     margin: 0.5rem 0 0;
     min-width: 21rem;
     font-style: italic;
+
+    border-radius: 0;
+    min-width: 23rem;
+    font-size: 1.75rem;
+    padding: 0 0 0 1.25rem;
+    margin: 0.4rem 0 0;
+    border-color: transparent transparent #6b77ea;
 }
 
 .l-search__input__buttons {
