--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -53,6 +53,7 @@
     padding-top: 0.5rem;
     border-left: 1px solid #d0d0d0;
 
+    border-right: 1px solid #d0d0d0;
     min-width: 27rem;
     max-width: 30rem;
 }
