Search Filter selection update

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -638,6 +638,7 @@ ul.fancytree-container {
 .show > .btn-primary.dropdown-toggle {
     background: #fff;
     color: #000;
+    cursor: default;
 }
 
 // View Styles
