--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -174,16 +174,25 @@
 }
 .sui-advTerm {
     font-size: 1.175rem;
-    padding: 0 0.5rem 0.5rem 2.5rem;
+    padding: 0 0.5rem 0.3rem 2.5rem;
     margin: 0.5rem 0 0 1rem;
     text-transform: capitalize;
     cursor: default;
+    padding-left: 1rem;
+    padding-top: 0.8rem;
+    margin-left: 0;
+    background: #f9f9f9;
+    border: 1px solid #ddd;
+    border-width: 0.2rem 0.1rem 0.1rem;
+    margin-bottom: 2px;
 }
 
 .sui-advTermRem {
     display: inline-block;
     cursor: pointer;
-    margin-left: 4px;
+    margin-left: 0.2rem;
+    position: absolute;
+    left: -2rem;
 }
 .sui-advTermRem::before {
     color: red;
@@ -198,7 +207,7 @@
 .sui-advTerm > div {
     display: inline-block;
     margin-right: 1.5rem;
-    margin-left: 1rem;
+    margin-left: 2rem;
     white-space: nowrap;
     position: relative;
     padding-bottom: 0.2rem;
@@ -227,10 +236,9 @@
     background-color: #fafafa;
     text-align: left;
     border: 0.1rem solid #ddd;
-    border-top-color: #aaa;
     border-bottom-width: 0.3rem;
     border-radius: 0 0 1.5rem 1.5rem;
-    padding: 0.8rem 0.8rem 0.3rem;
+    padding: 0.3rem 0.8rem;
     font-size: 1.3rem;
     color: #333;
     margin: 0 0 0.75rem;
@@ -240,6 +248,7 @@
 .sui-advBox:first-child .sui-advEdit {
     font-size: 1.3rem;
     text-transform: capitalize;
+    /*border-top: 2px solid #ddd;*/
 }
 .sui-advEdit-facet-ctrls {
     position: relative;
