--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -187,7 +187,7 @@
     margin-bottom: 2px;
 }
 
-.sui-advTermRem {
+.l-column__search .sui-advTermRem {
     display: inline-block;
     cursor: pointer;
     margin-left: 0.2rem;
