Search Box style update

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -639,6 +639,7 @@ ul.fancytree-container {
     background: #fff;
     color: #000;
     cursor: default;
+    border-color: #4d59ca;
 }
 
 // View Styles
