--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -56,6 +56,8 @@
     border-right: 1px solid #d0d0d0;
     min-width: 27rem;
     max-width: 30rem;
+
+    box-shadow: inset 0 0 1.25rem #ddd;
 }
 .c-site__search > * {
     display: inline;
