Style updates, Search Box base added and kmapsTree scrollable pane defined

--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -78,6 +78,8 @@
     padding: 0 0 0 1.25rem;
     margin: 0.4rem 0 0;
     border-color: transparent transparent #6b77ea;
+
+    border-bottom: 5px solid #e0c780;
 }
 
 .l-search__input__buttons {
