Style updates, Feature Card and Filter controls

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -532,13 +532,13 @@ ul.fancytree-container {
     border: 1px solid #ddd;
     margin: 0 0.25rem 0;
     border-radius: 0.5rem;
-    background-color: #6b77ea;
+    background-color: #b99839;
     color: #fff;
     transition: all 0.25s;
 }
 .l-column__search nav:nth-of-type(2) > div a:hover {
-    background-color: #4d59ca;
-    border-color: #4d59ca;
+    background-color: #a27f1c;
+    border-color: #a27f1c;
     color: #fff;
 }
 .l-column__search nav:nth-of-type(2) > div a:active {
