--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -204,6 +204,8 @@
     color: #fff;
     position: relative;
     top: 0.15rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
 }
 .c-card__footer .u-icon__places {
     color: #fff;
