--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -512,6 +512,7 @@ color: #a4baec;
     position: relative;
     top: -0.15rem;
     padding-left: 0.3rem;
+    margin-left: 1.25rem;
 }
 .sui-boolItem {
     border: none;
