--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -36,8 +36,17 @@
     left: 50%;
     margin-left: -0.6rem;
 }
+.c-MainSearchToggle--group label.active::after {
+    width: 0;
+    height: 0;
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
 .c-MainSearchToggle--group label.btn.active svg {
-    font-size: 2.075rem;
+    font-size: 2.2rem;
     color: #000;
     padding-left: 0.2rem;
     padding-top: 0;
