--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -94,12 +94,13 @@
 
 .sui-advHeader .u-icon__plus,
 .sui-advHeader .u-icon__minus {
-    position: absolute;
-    right: 0.65rem;
-    top: 0.7rem;
     font-size: 0.9rem;
-    color: #eee;
+    color: #fff;
     cursor: pointer;
+    position: absolute;
+    right: 0.9rem;
+    top: 0.58rem;
+    font-size: 0.95rem;
     text-shadow: 0 0 0.1rem #161a3c;
 }
 
@@ -174,21 +175,22 @@
 }
 .sui-advTerm {
     font-size: 1.175rem;
-    padding: 0.8rem 0.5rem 0.3rem 1.5rem;
+    padding: 0.8rem 0.5rem 0.3rem 0;
     margin: 0.5rem 0 0.2rem;
     text-transform: capitalize;
     cursor: default;
     background: #f9f9f9;
-    border: 1px solid #ddd;
-    border-width: 0.2rem 0.1rem 0.1rem;
+    border: 1px solid #c4c8ef;
+    border-width: 0.2rem 0.1rem 0.2rem;
+    border-radius: 0.5rem;
 }
 
 .l-column__search .sui-advTermRem {
-    display: inline-block;
+    /*   display: inline-block;
     cursor: pointer;
     margin-left: 0.2rem;
     position: absolute;
-    left: -2rem;
+    left: -2rem; */
 }
 .sui-advTermRem::before {
     color: red;
@@ -203,7 +205,7 @@
 .sui-advTerm > div {
     display: inline-block;
     margin-right: 1.5rem;
-    margin-left: 2rem;
+    /*  margin-left: 2rem; */
     white-space: nowrap;
     position: relative;
     padding-bottom: 0.2rem;
@@ -233,7 +235,7 @@
     text-align: left;
     border: 0.1rem solid #ddd;
     border-bottom-width: 0.3rem;
-    border-radius: 0 0 1.5rem 1.5rem;
+    border-radius: 0.5rem 0.5rem 1.5rem 1.5rem;
     padding: 0.3rem 0.8rem;
     font-size: 1.3rem;
     color: #333;
@@ -252,7 +254,7 @@
 }
 .sui-advEdit-facet-ctrls-btns {
     position: absolute;
-    top: 0.4rem;
+    top: 0.5rem;
     right: 1rem;
 }
 .sui-advEdit-facet-ctrls-btns .btn {
@@ -322,7 +324,16 @@ input:focus-visible,
 .sui-advPlus {
     position: relative;
     top: -0.3rem;
+    margin-right: 0.5rem;
 }
+/* - selectors not working right yet -
+.sui-advPlus .u-icon__minus ~ .btn-primary {
+    padding-bottom:1.5rem;
+    background-color:transparent;
+    color:#333;
+    border-bottom-color:transparent;
+}
+*/
 .sui-advEditBut {
     display: inline-block;
     cursor: pointer;
@@ -382,7 +393,7 @@ input:focus-visible,
     background-color: #dee7f1;
     border-right: 0.4rem solid #6b77ea;
     border-left: 0.2rem solid #6b77ea;
-    border-radius: 1rem 0 0 1rem;
+    border-radius: 0.5rem 0 0 0.5rem;
 }
 .sui-advEditLine.chosen::after {
     content: '√';
