--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -2,12 +2,12 @@
     border-top: 2px solid #eee;
 
     margin-top: -1rem;
-    margin-left: -1rem;
+    /* margin-left: -1rem; */
 }
 .c-image__context {
     padding-left: 0;
     padding-right: 0;
-    border-top: 0.3rem solid #b49c59;
+    /* border-top: 0.3rem solid #b49c59; */
     max-width: 78vw;
 }
 .c-image {
