--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -179,7 +179,7 @@
     margin: 0.5rem 0 0.2rem;
     text-transform: capitalize;
     cursor: default;
-    background: #f9f9f9;
+    background: #f0f0f0;
     border: 1px solid #c4c8ef;
     border-width: 0.2rem 0.1rem 0.2rem;
     border-radius: 0.5rem;
@@ -264,7 +264,15 @@
     border-style: solid;
     background-color: #4d59ca;
     color: #fff;
-    opacity: 0.55;
+    opacity: 0.7;
+
+    padding: 0.2rem 1rem;
+    font-size: 1.3rem;
+    border-color: #ccc;
+    border-style: solid;
+    background-color: #ddd;
+    color: #333;
+    opacity: 1;
 }
 .sui-advEdit-facet-ctrls-btns .btn-group > .btn:first-child {
     border-radius: 1rem 0 0 1rem !important;
