--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
@@ -48,7 +48,7 @@
 
 .sui-termDefinitions__extra {
     text-align: right;
-    color: #a2733f;
+    color: #91693e;
     margin-top: 0.8rem;
     font-size: smaller;
 }
