--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -17,6 +17,7 @@
 .sui-termDicts__dict-name {
     font-weight: 400;
     font-style: italic;
+    font-size: 1.75rem;
 }
 ul.sui-termDicts__dict-wrapper {
     margin-top: 1rem;
