--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -1,17 +1,30 @@
 @import '../../index-variables';
 
 .c-kmaptree {
-    margin: 0 0 0 1.5rem;
+    margin: 0 0 0 1rem;
     max-height: 50rem;
     overflow-y: scroll;
     border: 2px solid #ddd;
     border-width: 0 2px 4px 0;
     border-radius: 0 0 3rem 0;
+
+    margin: 0 1rem;
+    max-height: 50rem;
+    overflow-y: scroll;
+    border: 2px solid #ddd;
+    border-width: 0 2px 4px 0;
+    border-radius: 0 0 3rem 0;
+    background: white;
+    padding: 0.5rem 0.5rem 2rem 1rem;
+    margin-right: 1rem;
 }
 #l-column__search--treeNav .c-kmaptree {
     max-height: 70rem;
     min-height: 70rem;
     margin-top: 1.5rem;
+    margin-right: 0;
+    padding: 0;
+    background: transparent;
 }
 .tree-test .c-kmaptree {
     height: 80vh;
