--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -56,6 +56,7 @@
     border-color: #ddd !important;
     border-bottom-color: #aaa !important;
     opacity: 1;
+    width: 45rem;
 }
 .c-MainSearchToggle--button:hover {
     color: #000 !important;
