--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -40,7 +40,7 @@
     height: 0.325rem;
     content: '';
     position: absolute;
-    top: 0;
+    top: 0.05rem;
     left: 0;
     background: #4d59ca;
     width: 100%;
@@ -77,7 +77,7 @@
         border-left: none !important;
     }
     &:nth-child(n + 2) {
-        border-right: 0.15rem solid #ccc !important;
+        /*  box-shadow: inset 0 0.5rem 0.5rem #ccc !important; */
     }
 }
 
