Style update on searchbox and shadow for Tree panel

--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -37,7 +37,7 @@
     margin-left: -0.6rem;
 }
 .c-MainSearchToggle--group label.active::after {
-    height: 0.325rem;
+    height: 0.4rem;
     content: '';
     position: absolute;
     top: 0.05rem;
@@ -49,7 +49,7 @@
     font-size: 2.2rem;
     color: #000;
     padding-left: 0.2rem;
-    padding-top: 0;
+    padding-top: 0.3rem;
 }
 .c-MainSearchToggle--button {
     color: black;
