Style updates w/search elements, minor

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -420,7 +420,7 @@ div.image-wrapper.center figcaption {
     border: none;
     border-right: 1px solid #aaa;
     font-size: 1.65rem;
-    color: #333;
+    color: #000;
     letter-spacing: 0.0375rem;
 }
 .advanced-search-and-tree .nav-tabs .nav-link:nth-of-type(2) {
@@ -641,7 +641,7 @@ ul.fancytree-container {
     background: #fff;
     color: #000;
     cursor: default;
-    border-color: #4d59ca;
+    border-color: #6b77ea;
 }
 
 // View Styles
