--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -21,7 +21,8 @@
     border-width: 0 0.15rem;
 }
 .c-MainSearchToggle--group svg {
-    font-size: 1.9rem;
+    font-size: 2rem;
+    color: #000;
 }
 .c-MainSearchToggle--group label.active::before {
     width: 0;
