--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -43,16 +43,16 @@
 .c-site__search {
     display: -webkit-flex;
     display: flex;
-    height: 40px;
+    height: 4rem;
     margin-right: 15.25rem;
-    padding-left: 2rem;
-    padding-top: 0rem;
+    padding-left: 1.75rem;
+    padding-top: 0;
     border-left: 0.2rem solid #d0d0d0;
     border-right: 0.2rem solid #d0d0d0;
-    border-top: 4px solid #4d59ca;
+    border-top: 0.4rem solid #4d59ca;
     margin-top: 0.5rem;
-    min-width: 27rem;
-    max-width: 30rem;
+    min-width: 32rem;
+    max-width: 40rem;
     box-shadow: inset 0 0 1rem #ddd;
 }
 .c-site__search > * {
@@ -60,12 +60,8 @@
 }
 
 .sui-search2 {
-    border-radius: 4rem;
-    font-size: 1.45rem;
-    min-width: 21rem;
     font-style: italic;
-    border-radius: 0;
-    min-width: 23rem;
+    min-width: 27.5rem;
     font-size: 1.65rem;
     padding: 0 0 0 1.25rem;
     margin: 0.5rem 0 0;
