--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -561,7 +561,7 @@ ul.fancytree-container {
     color: #4d59ca;
 }
 .l-column__search nav:nth-of-type(2) > a .badge-secondary {
-    display: none; /* this temporarily hides the search count total number */
+    /* display: none;  this temporarily hides the search count total number */
 }
 /*
 .l-column__search > section {
