--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -78,6 +78,12 @@
     font-size: 1.25rem;
     letter-spacing: 0.05rem;
     text-shadow: 0 0 0.1rem #161a3c;
+    border: 1px solid #ddd;
+    opacity: 0.9;
+}
+.sui-advHeader .badge:hover {
+    border-color: #4d59ca;
+    opacity: 1;
 }
 /*
 .sui-advHeader .badge.badge-secondary {
