--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -28,8 +28,10 @@ ul.sui-termDicts__dict-wrapper {
 .sui-termDicts__dict-extra {
     text-align: right;
     color: #91693e;
-    margin-top: 0.4rem;
-    font-size: smaller;
+    margin-top: 0;
+    margin-bottom: 0.75rem;
+    font-size: 1.1rem;
+    font-weight: bold;
 }
 .sui-termDicts__dict-extra-lang {
     text-transform: uppercase;
