--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -2,9 +2,10 @@
 // * CONTENT SECTION: Content Header
 // --------------------------------------
 .c-content__header__main {
-    padding: 0.3rem 0 0;
+    padding: 0.075rem 0 0;
     height: 3rem;
     color: #fff;
+    border-top: 0.4rem double #fff;
 }
 .c-content__header__main__title {
     margin: 0 0 0 1.5rem;
