--- a/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
+++ b/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
@@ -23,7 +23,7 @@
     flex-direction: column;
     border-width: 0 1px 0 1px;
     border-style: solid;
-    border-color: #ccc;
+    border-color: #91693c;
     background: white;
 }
 .custSelect__main.cs_open .custSelect__options {
