--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -1,17 +1,16 @@
 .c-MainSearchToggle--group {
     align-self: center;
     margin: 0;
-    width: 18rem;
-    height: 4rem;
     position: absolute;
     top: 0;
-    right: 0.3rem;
+    right: 0;
     z-index: 1;
 }
 .c-MainSearchToggle--group label {
-    color: #444;
     background-color: #fff;
-    padding: 1rem 0;
+    padding: 0.8rem 0;
+    width: 6.2rem;
+    height: 4.5rem;
 }
 .c-MainSearchToggle--group label,
 .c-MainSearchToggle--group label input:focus {
@@ -21,8 +20,13 @@
     border-width: 0 0.15rem;
 }
 .c-MainSearchToggle--group svg {
-    font-size: 2rem;
+    font-size: 2.2rem;
     color: #000;
+    position: relative;
+    top: 0.3rem;
+}
+.c-MainSearchToggle--group label.active {
+    background-color: #4d59ca;
 }
 .c-MainSearchToggle--group label.active::before {
     width: 0;
@@ -30,34 +34,23 @@
     content: '';
     display: inline-block;
     border-style: solid;
-    border-width: 7px 7px 0 7px;
-    border-color: white transparent transparent transparent;
+    border-width: 1px 8px 7px 8px;
+    border-color: transparent transparent #fff transparent;
     position: absolute;
-    bottom: -0.7rem;
+    bottom: -0.4rem;
     left: 50%;
+    z-index: 1005;
     margin-left: -0.6rem;
-}
-.c-MainSearchToggle--group label.active::after {
-    height: 0.3rem;
-    content: '';
-    position: absolute;
-    top: 0.05rem;
-    left: 0;
-    background: #4d59ca;
-    width: 100%;
+    background-color: #4d59ca;
 }
 .c-MainSearchToggle--group label.btn.active svg {
-    font-size: 2.2rem;
-    color: #000;
-    padding-left: 0.2rem;
-    padding-top: 0.3rem;
+    color: #fff;
 }
 .c-MainSearchToggle--button {
     color: black;
     border-color: #ddd !important;
-    border-bottom-color: #aaa !important;
+    border-bottom-color: transparent !important;
     opacity: 1;
-    width: 4.5rem;
 }
 .c-MainSearchToggle--button:hover {
     color: #000 !important;
@@ -67,15 +60,14 @@
 .c-MainSearchToggle--button.active,
 .c-MainSearchToggle--button.active:hover,
 .c-MainSearchToggle--button.active:focus {
-    color: #222 !important;
-    background-color: #fff !important;
+    background-color: #4d59ca !important;
     opacity: 1;
 }
 
 .c-MainSearchToggle--group .c-MainSearchToggle--button.active {
     &:first-child {
         /* border-left: 0.15rem solid #ccc !important; */
-        border-left: none !important;
+        //* border-left: none !important;*/
     }
     &:nth-child(n + 2) {
         /*  box-shadow: inset 0 0.5rem 0.5rem #ccc !important; */
