Right column TreeNav style

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -491,6 +491,7 @@ ul.fancytree-container {
 }
 .l-column__search.c-TreeNav--tabs {
     padding-right: 1rem;
+    padding-top: 0.6rem;
 }
 .l-column__search.open.standalone {
     z-index: inherit;
