--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -67,7 +67,7 @@
 .c-MainSearchToggle--group .c-MainSearchToggle--button.active {
     &:first-child {
         /* border-left: 0.15rem solid #ccc !important; */
-        //* border-left: none !important;*/
+        /*border-left: none !important;*/
     }
     &:nth-child(n + 2) {
         /*  box-shadow: inset 0 0.5rem 0.5rem #ccc !important; */
@@ -76,8 +76,8 @@
 
 .c-MainSearchToggle--button:not(.active) {
     &:first-child {
-        border-right: 1px outset #ccc !important;
-        border-left: none !important;
+        /*  border-right: 1px outset #ccc !important; */
+        border-left: 0.15rem solid #ccc !important;
     }
     &:nth-child(n + 2) {
     }
