--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -259,19 +259,10 @@
 .sui-advEdit-facet-ctrls-btns .btn {
     padding: 0.2rem 1rem;
     font-size: 1.3rem;
-    border-color: #4d59ca;
+    border-color: #aaa;
     border-style: solid;
-    background-color: #4d59ca;
-    color: #fff;
-    opacity: 0.7;
-
-    padding: 0.2rem 1rem;
-    font-size: 1.3rem;
-    border-color: #ccc;
-    border-style: solid;
-    background-color: #ddd;
-    color: #333;
-    opacity: 1;
+    background-color: #eee;
+    color: #000;
 }
 .sui-advEdit-facet-ctrls-btns .btn-group > .btn:first-child {
     border-radius: 1rem 0 0 1rem !important;
@@ -287,10 +278,10 @@
 .sui-advEdit-facet-ctrls-btns .btn-primary:not(:disabled):not(.disabled):active,
 .sui-advEdit-facet-ctrls-btns .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
-    color: #fff;
+    color: #000;
     cursor: default;
-    border-color: #4d59ca;
-    background-color: #4d59ca !important;
+    border-color: #6b77ea;
+    background-color: #fff !important;
 }
 .sui-advEdit-facet-ctrls-btns .btn:focus,
 .sui-advEdit-facet-ctrls-btns .btn:active,
@@ -307,7 +298,7 @@
 
 .sui-advEdit-facet-ctrls-btns
     .btn-primary:not(.active):not(:disabled):not(.disabled):hover {
-    background-color: #4d59ca;
+    background-color: #4d59ca !important;
     color: #fff;
 }
 
