--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -17,8 +17,8 @@
     display: inline-block;
 }
 .navbar-brand img {
-    position: relative;
-    top: -0.2rem;
+    /*position: relative;
+    top: -0.2rem;*/
 }
 .navbar-brand h1 {
 }
@@ -51,7 +51,7 @@
     border-right: 0.2rem solid #d0d0d0;
     border-top: 0.3rem solid #4d59ca;
     border-bottom: 0.1rem solid #4d59ca;
-    margin-top: 0.5rem;
+    margin-top: 0.25rem;
     min-width: 32rem;
     box-shadow: inset 0 0 0.75rem #ddd;
 }
@@ -64,7 +64,7 @@
     min-width: 35rem;
     font-size: 1.85rem;
     padding: 0.25rem 2rem 0 1.25rem;
-    margin: 0.1rem 0 0;
+    margin: 0;
     border: none !important;
 }
 
